# tianditu-plugin

./: .clang-format  CMakeLists.txt  LICENSE.md  README.en.md  README.md
assets/: resources_url_config.json
cmake/: TiandituPluginConfig.cmake.in
example/: CMakeLists.txt  Example.qml  example.cc
src/: CMakeLists.txt  geocodereply.cc  geocodereply.h  geocodingmanagerengine.cc  geocodingmanagerengine.h  geomapsource.cc  geomapsource.h  geoserviceproviderfactory.cc  geoserviceproviderfactory.h  geotiledmap.cc  geotiledmap.h  geotiledmappingmanagerengine.cc  geotiledmappingmanagerengine.h  geotiledmapreply.cc  geotiledmapreply.h  geotilefetcher.cc  geotilefetcher.h  plugin.json  resources_url_config.json  sqlitetilecache.cc  sqlitetilecache.h
